# Whist-Core

./: .gitignore  .pylintrc  .readthedocs.yaml  .readthedocs.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  setup.py
.github/: codeql-config.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: codeql-analysis.yml  lint.yml  pylint.yml  python-app.yml  python-ci.yml  python-publish.yml
docs/: conf.py  requirements.txt
docs/source/: conf.py  index.rst  requirements.txt
docs/source/whist/core/: index.rst
requirements/: lint.txt  requirements.txt
src/whist/: card.py  deck.py
tests/whist/: test_card.py  test_rank.py  test_suite.py
tests/whist/core/: base_test_case.py  player_table_base_test_case.py  team_base_test_case.py  test_card.py  test_deck.py  test_player.py  test_rank.py  test_suit.py  test_suite.py  test_table.py  test_token.py  test_userlist.py
tests/whist/core/cards/: test_card.py  test_card_container.py  test_deck.py  test_hand.py  test_rank.py  test_stack.py  test_suit.py
tests/whist/core/game/: test_game.py  test_hand.py  test_legal_checker.py  test_play_order.py  test_rubber.py  test_trick.py
tests/whist/core/scoring/: scoring_base_test_case.py  test_elo.py  test_score.py  test_score_card.py  test_team.py
tests/whist/core/session/: test_matcher.py  test_table.py  test_userlist.py
tests/whist/core/user/: test_player.py
tests/whist_core/: base_test_case.py  player_table_base_test_case.py  team_base_test_case.py  test_token.py
tests/whist_core/cards/: test_card.py  test_card_container.py  test_rank.py  test_suit.py
tests/whist_core/game/: test_game.py  test_hand.py  test_legal_checker.py  test_play_order.py  test_rubber.py  test_trick.py
tests/whist_core/scoring/: test_elo.py  test_score.py  test_score_calculator.py  test_score_card.py  test_team.py
tests/whist_core/session/: test_matcher.py  test_table.py  test_userlist.py
tests/whist_core/user/: test_player.py
whist/: deck.py
whist/core/: __init__.py  card.py  deck.py  player.py  session.py  table.py  token.py  userlist.py  util.py
whist/core/cards/: card.py  card_container.py  deck.py  hand.py  stack.py
whist/core/error/: table_error.py
whist/core/game/: errors.py  game.py  hand.py  legal_checker.py  play_order.py  player_at_table.py  rubber.py  trick.py  util.py  warnings.py
whist/core/scoring/: elo.py  score.py  score_card.py  scoring_base_test_case.py  team.py
whist/core/session/: matcher.py  session.py  table.py  userlist.py
whist/core/user/: player.py  status.py
whist_core/: __init__.py
whist_core/cards/: card.py  card_container.py
whist_core/error/: player_error  player_error.py  table_error.py
whist_core/game/: errors.py  hand.py  play_order.py  rubber.py
whist_core/scoring/: score_calculator.py  util.py
whist_core/session/: distribution.py  matcher.py  table.py  userlist.py
whist_core/user/: player.py
