[tool.poetry]
name = "whist-core"
# remember to also update the version in __init__.py and docs/source/conf.py!
version = "0.9.2"
description = "Whist rules implementation"
authors = ["Whist-Team"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Whist-Team/Whist-Core"
repository = "https://github.com/Whist-Team/Whist-Core"
documentation = "https://whist-core.readthedocs.io"
keywords = ["game", "whist"]
classifiers = [
    "Operating System :: OS Independent"
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/Whist-Team/Whist-Core/issues"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.8"
deprecation = "^2.1"

[tool.poetry.dev-dependencies]
pytest = "^8.3"
pytest-asyncio = "^0.24.0" # .5 because that version is the first to have compat with pytest 8
flake8 = "^7.1"
flake8-docstrings = "^1.7"
pylint = "^3.2"
setuptools = "^74.0"
wheel = "^0.44"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
