[project]
name = "whist-core"
# remember to also update the version in __init__.py and docs/source/conf.py!
version = "0.9.2"
description = "Whist rules implementation"
authors = [{ name = "Whist-Team" }]
license = "MIT"
readme = "README.md"
keywords = ["game", "whist"]
classifiers = [
    "Operating System :: OS Independent"
]
dynamic = ["requires-python", "dependencies"]

[project.urls]
homepage = "https://github.com/Whist-Team/Whist-Core"
source = "https://github.com/Whist-Team/Whist-Core"
documentation = "https://whist-core.readthedocs.io"
issues = "https://github.com/Whist-Team/Whist-Core/issues"

[tool.poetry]
requires-poetry = ">=2.0"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.11"
deprecation = "^2.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
pytest-asyncio = "^0.26"
flake8 = "^7.2"
flake8-docstrings = "^1.7"
pylint = "^3.3"
setuptools = "^78.1"
wheel = "^0.45"

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"
