[project]
name = "whist-core"
# remember to also update the version in __init__.py and docs/source/conf.py!
version = "0.9.2"
description = "Whist rules implementation"
authors = [{ name = "Whist-Team" }]
license = "MIT"
readme = "README.md"
keywords = ["game", "whist"]
classifiers = [
    "Operating System :: OS Independent"
]
requires-python = ">=3.10"
dynamic = ["dependencies"]

[project.urls]
homepage = "https://github.com/Whist-Team/Whist-Core"
source = "https://github.com/Whist-Team/Whist-Core"
documentation = "https://whist-core.readthedocs.io"
issues = "https://github.com/Whist-Team/Whist-Core/issues"

[tool.poetry]
requires-poetry = ">=2.0"

[tool.poetry.dependencies]
pydantic = "^2.12"
deprecation = "^2.1"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0"
pytest-asyncio = "^1.2"
flake8 = "^7.3"
flake8-docstrings = "^1.7"
pylint = "^4.0"
setuptools = "^80.9"
wheel = "^0.45"

[tool.poetry.group.docs.dependencies]
sphinx = "^8.1" # keeping this on an older version so we can install this with our older minimum python requirement
sphinx-autoapi = "^3.6"
sphinx-rtd-theme = "^3.0"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.9"

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"
